--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -1,6 +1,99 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version = "1.0" encoding = "utf-8"?>
+<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".SignUpActivity"
+    android:background="@drawable/login_background"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="88dp"
+        android:text="Register"
+        android:textColor="@color/teal_200"
+        android:textSize="55dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="50dp"
+        android:height="60dp"
+        android:background="@drawable/curve_shape"
+        android:drawableStart="@drawable/person_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="15"
+        android:hint="Username"
+        android:padding="15dp"
+        android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="50dp"
+        android:height="60dp"
+        android:background="@drawable/curve_shape"
+        android:drawableStart="@drawable/lock_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="15"
+        android:hint="Password"
+        android:padding="15dp"
+        android:textSize="20dp" />
+
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginEnd="50dp"
+        android:height="60dp"
+        android:background="@drawable/curve_shape"
+        android:drawableStart="@drawable/mail_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="15"
+        android:hint="Email"
+        android:padding="15dp"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="247dp"
+        android:layout_height="77dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="426dp"
+        android:layout_marginEnd="112dp"
+        android:height="50dp"
+        android:background="@drawable/login_button_background"
+        android:text="Sign Up"
+        android:textSize="22dp" />
+
+</RelativeLayout>
