Login and Signup Activity Theme

--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -3,9 +3,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#4efc8"
-                android:endColor="#8fc4f2"
-                android:type="linear" />
+                android:startColor="#2fbafa"
+                android:endColor="#2fbafa"
+                android:type="linear"
+            />
+
         </shape>
+
     </item>
 </selector>
