--- a/app/src/main/res/drawable/login_button_background.xml
+++ b/app/src/main/res/drawable/login_button_background.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="3dp"
-        android:color="#80FFFFFF" />
+<!--    android:shape="rectangle">-->
 
-    <corners android:radius="25dp" />
+    <gradient
+        android:startColor="#4af7f2"
+        android:centerColor="#03c4ff"
+        android:endColor="#f743f4"
 
-    <gradient android:angle="270"
-        android:centerColor="#90150517"
-        android:endColor="#90150517"
-        android:startColor="#90150517" />
+    />
+    <corners android:radius="10dp"/>
 </shape>
