--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="83dp"
         android:layout_marginTop="88dp"
         android:text="Register"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/white"
         android:textSize="55dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,11 +89,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="105dp"
-        android:layout_marginTop="426dp"
+        android:layout_marginTop="424dp"
         android:layout_marginEnd="112dp"
         android:height="50dp"
         android:background="@drawable/login_button_background"
-        android:text="Sign Up"
+        android:text="register"
+        android:textColor="@color/white"
         android:textSize="22dp" />
 
 </RelativeLayout>
