--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignUpActivity"
-    android:background="@drawable/login_background"
+    android:background="@drawable/app_background"
     >
 
     <TextView
@@ -24,14 +24,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/txtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="195dp"
         android:layout_marginEnd="50dp"
         android:height="60dp"
         android:background="@drawable/curve_shape"
@@ -40,17 +40,18 @@
         android:ems="15"
         android:hint="Username"
         android:padding="15dp"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/txtPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="325dp"
         android:layout_marginEnd="50dp"
         android:height="60dp"
         android:background="@drawable/curve_shape"
@@ -59,18 +60,38 @@
         android:ems="15"
         android:hint="Password"
         android:padding="15dp"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
-
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/txtConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="388dp"
+        android:layout_marginEnd="50dp"
+        android:height="60dp"
+        android:background="@drawable/curve_shape"
+        android:drawableStart="@drawable/lock_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="15"
+        android:hint="Confirm Password"
+        android:padding="15dp"
+        android:textColorHint="@color/black"
+        android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="260dp"
         android:layout_marginEnd="50dp"
         android:height="60dp"
         android:background="@drawable/curve_shape"
@@ -79,22 +100,40 @@
         android:ems="15"
         android:hint="Email"
         android:padding="15dp"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
     <Button
-        android:id="@+id/login_btn"
-        android:layout_width="247dp"
-        android:layout_height="77dp"
+        android:id="@+id/btnRegister"
+        android:layout_width="295dp"
+        android:layout_height="71dp"
+        android:layout_below="@+id/txtPassword"
+        android:layout_alignEnd="@+id/txtConfirmPassword"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="424dp"
-        android:layout_marginEnd="112dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="79dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="195dp"
         android:height="50dp"
         android:background="@drawable/login_button_background"
-        android:text="register"
+        android:text="Register"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="22dp" />
+        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/txtAlreadyHave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="73dp"
+        android:layout_marginBottom="139dp"
+        android:text="Already Have An Account"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        android:textStyle="bold"/>
 </RelativeLayout>
