Login Register Event

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,131 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:background="@drawable/app_background">
+    android:background="@drawable/app_background"
+    tools:context=".LoginActivity">
 
     <TextView
+        android:id="@+id/txtGymApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="70dp"
         android:text="GymApp"
-        android:textColor="@color/white"
-        android:textSize="40dp"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.081" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="191dp"
+    <EditText
+        android:id="@+id/txtEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="36dp"
-        android:src="@drawable/fit_icon_24"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="77dp" />
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/curve_shape"
+        android:drawableLeft="@drawable/mail_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtGymApp" />
 
     <EditText
-        android:id="@+id/inputUsername"
-        android:layout_width="match_parent"
+        android:id="@+id/txtPassword"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/person_icon_24"
+        android:drawableLeft="@drawable/person_icon_24"
         android:drawablePadding="15dp"
-        android:ems="15"
-        android:hint="Username"
-        android:padding="15dp"
-        android:textSize="20dp" />
-
-    <EditText
-        android:id="@+id/inputPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
-        android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/lock_icon_24"
-        android:drawablePadding="15dp"
-        android:ems="15"
+        android:ems="10"
         android:hint="Password"
-        android:padding="15dp"
-        android:textSize="20dp" />
+        android:inputType="number|textPersonName|textPassword"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
+        app:layout_constraintStart_toStartOf="@+id/txtEmail"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="295dp"
-        android:layout_height="71dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="391dp"
-        android:height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:height="60dp"
         android:background="@drawable/login_button_background"
+        android:elegantTextHeight="true"
         android:text="Login"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
+        app:layout_constraintStart_toStartOf="@+id/txtPassword"
+        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
     <TextView
-        android:id="@+id/txtForgotPassword"
+        android:id="@+id/txtRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="338dp"
-        android:layout_marginEnd="50dp"
-        android:text="Forgot Password ?"
-        android:textColor="@color/white"
-        android:textSize="24sp" />
+        android:layout_marginTop="24dp"
+        android:text="REGISTER"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+        app:layout_constraintStart_toStartOf="@+id/btnLogin"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginBottom="194dp"
-        android:text="Don't have an Account?"
-        android:textSize="18dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/txtSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="254dp"
-        android:layout_marginBottom="194dp"
-        android:text="Sign Up"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        android:textStyle="bold"/>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
