--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -1,139 +1,142 @@
-<?xml version = "1.0" encoding = "utf-8"?>
-<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignUpActivity"
-    android:background="@drawable/app_background"
-    >
+    android:background="@drawable/app_background">
 
     <TextView
+        android:id="@+id/txtViewRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="88dp"
         android:text="Register"
-        android:textColor="@color/white"
-        android:textSize="55dp"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.081" />
 
     <EditText
-        android:id="@+id/txtUsername"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtInputUsername"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="195dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/person_icon_24"
+        android:drawableLeft="@drawable/person_icon_24"
         android:drawablePadding="15dp"
-        android:ems="15"
+        android:ems="10"
         android:hint="Username"
-        android:padding="15dp"
-        android:textColorHint="@color/black"
-        android:textSize="20dp" />
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewRegister" />
 
     <EditText
-        android:id="@+id/txtPassword"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtInputEmail"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="325dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/lock_icon_24"
+        android:drawableLeft="@drawable/mail_icon_24"
         android:drawablePadding="15dp"
-        android:ems="15"
-        android:hint="Password"
-        android:padding="15dp"
-        android:textColorHint="@color/black"
-        android:textSize="20dp" />
-
-    <EditText
-        android:id="@+id/txtConfirmPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="388dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
-        android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/lock_icon_24"
-        android:drawablePadding="15dp"
-        android:ems="15"
-        android:hint="Confirm Password"
-        android:padding="15dp"
-        android:textColorHint="@color/black"
-        android:textSize="20dp" />
-
-    <EditText
-        android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="50dp"
-        android:height="60dp"
-        android:background="@drawable/curve_shape"
-        android:drawableStart="@drawable/mail_icon_24"
-        android:drawablePadding="15dp"
-        android:ems="15"
+        android:ems="10"
         android:hint="Email"
-        android:padding="15dp"
-        android:textColorHint="@color/black"
-        android:textSize="20dp" />
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtInputUsername"
+        app:layout_constraintStart_toStartOf="@+id/txtInputUsername"
+        app:layout_constraintTop_toBottomOf="@+id/txtInputUsername" />
+
+    <EditText
+        android:id="@+id/txtInputPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/curve_shape"
+        android:drawableLeft="@drawable/lock_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtInputEmail"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txtInputEmail"
+        app:layout_constraintTop_toBottomOf="@+id/txtInputEmail" />
+
+    <EditText
+        android:id="@+id/txtInputConfirmPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/curve_shape"
+        android:drawableLeft="@drawable/lock_icon_24"
+        android:drawablePadding="15dp"
+        android:ems="10"
+        android:hint="Confirm Password"
+        android:inputType="textPersonName|textPassword"
+        android:padding="20dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtInputPassword"
+        app:layout_constraintStart_toStartOf="@+id/txtInputPassword"
+        app:layout_constraintTop_toBottomOf="@+id/txtInputPassword" />
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="295dp"
-        android:layout_height="71dp"
-        android:layout_below="@+id/txtPassword"
-        android:layout_alignEnd="@+id/txtConfirmPassword"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="195dp"
-        android:height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="32dp"
+        android:height="60dp"
         android:background="@drawable/login_button_background"
+        android:elegantTextHeight="true"
+        android:onClick="save"
         android:text="Register"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="@+id/txtInputConfirmPassword"
+        app:layout_constraintStart_toStartOf="@+id/txtInputConfirmPassword"
+        app:layout_constraintTop_toBottomOf="@+id/txtInputConfirmPassword" />
 
     <TextView
-        android:id="@+id/txtAlreadyHave"
+        android:id="@+id/txtBackToLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="73dp"
-        android:layout_marginBottom="139dp"
-        android:text="Already Have An Account"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        android:textStyle="bold"/>
-</RelativeLayout>
+        android:layout_marginTop="24dp"
+        android:text="BACK TO LOGIN"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
+        app:layout_constraintStart_toStartOf="@+id/btnRegister"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+
+    <TextView
+        android:id="@+id/txtStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Register"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/txtInputConfirmPassword"
+        app:layout_constraintTop_toBottomOf="@+id/txtInputConfirmPassword" />
+</androidx.constraintlayout.widget.ConstraintLayout>
